[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/pause-menu.gd" type="Script" id=1]
[ext_resource path="res://pixelPlanets/Theme.tres" type="Theme" id=2]

[node name="pause-menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
modulate = Color( 0, 1, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -150.0
margin_right = 100.0
margin_bottom = 150.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonResume" type="Button" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 125.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "RESUME"

[node name="ButtonQuit" type="Button" parent="VBoxContainer"]
margin_top = 175.0
margin_right = 200.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "QUIT"
[connection signal="pressed" from="VBoxContainer/ButtonResume" to="." method="_on_ButtonResume_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
